ISSUE #23 Fix page controls always visible

--- a/gui/src/pages/userPage/userPage.module.css
+++ b/gui/src/pages/userPage/userPage.module.css
@@ -15,3 +15,8 @@ a {
 .user_page {
     overflow: scroll;
 }
+
+.stickyRow {
+    padding: 10px;
+    background: #fff;
+}
